--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -47,6 +47,9 @@ if (PIO_ENABLE_ASYNC AND NOT PIO_USE_MPI_SERIAL)
   add_executable (test_intercomm EXCLUDE_FROM_ALL test_intercomm.c)
   target_link_libraries (test_intercomm pioc)
   add_dependencies (tests test_intercomm)
+  add_executable (test_intercomm2 EXCLUDE_FROM_ALL test_intercomm2.c)
+  target_link_libraries (test_intercomm2 pioc)
+  add_dependencies (tests test_intercomm2)
   add_executable (test_darray_async EXCLUDE_FROM_ALL test_darray_async.c)
   target_link_libraries (test_darray_async pioc)
   add_dependencies (tests test_darray_async)
@@ -96,6 +99,10 @@ else ()
         TIMEOUT ${DEFAULT_TEST_TIMEOUT})
     add_mpi_test(test_intercomm
         EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/test_intercomm
+        NUMPROCS 4
+        TIMEOUT ${DEFAULT_TEST_TIMEOUT})
+    add_mpi_test(test_intercomm2
+        EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/test_intercomm2
         NUMPROCS 4
         TIMEOUT ${DEFAULT_TEST_TIMEOUT})
   endif ()
