--- a/tests/general/CMakeLists.txt
+++ b/tests/general/CMakeLists.txt
@@ -12,7 +12,8 @@ SET(GENERATED_SRCS pio_file_simple_tests.F90
                    ncdf_get_put.F90
                    ncdf_fail.F90 
                    pio_decomp_tests.F90
-                   pio_decomp_fillval.F90)
+                   pio_decomp_fillval.F90
+                   pio_iosystem_tests.F90)
 
 foreach (SRC_FILE IN LISTS GENERATED_SRCS)
     add_custom_command (
@@ -322,6 +323,25 @@ if (PIO_USE_MPISERIAL)
 else ()
     add_mpi_test(pio_decomp_fillval2
         EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/pio_decomp_fillval2
+        NUMPROCS 4
+        TIMEOUT ${DEFAULT_TEST_TIMEOUT})
+endif ()
+
+#===== pio_iosystems_test =====
+add_executable (pio_iosystem_tests EXCLUDE_FROM_ALL
+    pio_iosystem_tests.F90
+    ${CMAKE_CURRENT_SOURCE_DIR}/util/pio_tutil.F90)
+target_link_libraries (pio_iosystem_tests piof)
+add_dependencies (tests pio_iosystem_tests)
+
+if (PIO_USE_MPISERIAL)
+    add_test(NAME pio_iosystem_tests
+        COMMAND pio_iosystem_tests)
+    set_tests_properties(pio_iosystem_tests
+        PROPERTIES TIMEOUT ${DEFAULT_TEST_TIMEOUT})
+else ()
+    add_mpi_test(pio_iosystem_tests
+        EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/pio_iosystem_tests
         NUMPROCS 4
         TIMEOUT ${DEFAULT_TEST_TIMEOUT})
 endif ()
