Test PIO iosystem with 3 files
This test creates 3 files and opens/checks_the_contents with
different communicators. Different communicators are created
for odd and even processes, and these communicators are
used to open and check the contents of the files.

--- a/tests/general/CMakeLists.txt
+++ b/tests/general/CMakeLists.txt
@@ -13,7 +13,8 @@ SET(GENERATED_SRCS pio_file_simple_tests.F90
                    ncdf_fail.F90 
                    pio_decomp_tests.F90
                    pio_decomp_fillval.F90
-                   pio_iosystem_tests.F90)
+                   pio_iosystem_tests.F90
+                   pio_iosystem_tests2.F90)
 
 foreach (SRC_FILE IN LISTS GENERATED_SRCS)
     add_custom_command (
@@ -342,6 +343,25 @@ if (PIO_USE_MPISERIAL)
 else ()
     add_mpi_test(pio_iosystem_tests
         EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/pio_iosystem_tests
+        NUMPROCS 4
+        TIMEOUT ${DEFAULT_TEST_TIMEOUT})
+endif ()
+
+#===== pio_iosystems_test2 =====
+add_executable (pio_iosystem_tests2 EXCLUDE_FROM_ALL
+    pio_iosystem_tests2.F90
+    ${CMAKE_CURRENT_SOURCE_DIR}/util/pio_tutil.F90)
+target_link_libraries (pio_iosystem_tests2 piof)
+add_dependencies (tests pio_iosystem_tests2)
+
+if (PIO_USE_MPISERIAL)
+    add_test(NAME pio_iosystem_tests2
+        COMMAND pio_iosystem_tests2)
+    set_tests_properties(pio_iosystem_tests2
+        PROPERTIES TIMEOUT ${DEFAULT_TEST_TIMEOUT})
+else ()
+    add_mpi_test(pio_iosystem_tests2
+        EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/pio_iosystem_tests2
         NUMPROCS 4
         TIMEOUT ${DEFAULT_TEST_TIMEOUT})
 endif ()
